@@ -24,6 +24,7 @@
 
 #include "stdafx.h"
 #include "Ucs2Utf8.h"
+#include "MainFrm.h"
 #include "FilterList.h"
 #include "DirItem.h"
 #include "FileFilterMgr.h"
@@ -293,20 +294,12 @@ BOOL FileFilterHelper::includeDir(LPCTSTR szDirName)
 }
 
 /**
- * @brief Open filter file to editor (notepad) for modifying.
- *
+ * @brief Open filter file to external editor for modifying.
  * @param [in] szFileFilterterPath Path of filter file to edit.
- * @todo Use external editor defined in options?
  */
 void FileFilterHelper::EditFileFilter(LPCTSTR szFileFilterPath)
 {
-	CString cmdLine = (CString)_T("notepad ") + szFileFilterPath;
-	STARTUPINFO stInfo = {0};
-	PROCESS_INFORMATION prInfo;
-	BOOL processSuccess = FALSE;
-	stInfo.cb = sizeof(STARTUPINFO);
-	processSuccess = CreateProcess(NULL, (LPTSTR)(LPCTSTR)cmdLine, NULL,
-		NULL, FALSE, 0, NULL, NULL, &stInfo, &prInfo);
+	CMainFrame::OpenFileToExternalEditor(szFileFilterPath);
 }
 
 /**
